# DBoW2

./: .gitignore  CMakeLists.txt
demo/: demo.cpp
include/DBoW2/: DBoW2.h  FBrief.h  FClass.h  FORB.h  FSurf64.h  FeatureTraits.h  FeatureVector.h  QueryResults.h  TemplatedDatabase.h  TemplatedVocabulary.h
src/: DBoW2Config.cmake.in  QueryResults.cpp  ScoringObject.cpp
